tests/ui/issues/issue-15207.stderr
error[E0599]: no method named `push` found for type `!` in the current scope
  --> $DIR/issue-15207.rs:3:15
   |
LL |         break.push(1)
   |               ^^^^ method not found in `!`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0599`.
